# Anti117

./: README.md
weak-1/day-2/excercise11/: variablemutation.cpp
weak-1/day-2/excercise2/: CMakeLists.txt  humptydumpty.cpp
weak-1/day-2/excercise3/: helloothers.cpp
weak-1/day-2/excercise4/: introduce.cpp
weak-1/day-2/excercise8/: swap.cpp
weak-1/day-2/exercise13/: Seconds.cpp
weak-1/day-2/exercise15/: KilometersToMiles.cpp
week-01/day-2/: hellome.cpp
week-01/day-2/exercise-23/: IwontCheatonTheExams.cpp
week-01/day-2/exercise13/: hellouser.cpp
week-01/day-2/exercise18/: oddeven.cpp
week-01/day-2/exercise19/: OneTwoALot.cpp
week-01/day-2/exercise21/: partyindicator.cpp
week-01/day-2/exercise24/: printeven.cpp
week-01/day-2/exercise25/: MultiplicationTable.cpp
week-01/day-2/exercise26/: CountFromTo.cpp
week-01/day-2/exercise28/: DrawTriangle.cpp
week-01/day-2/exercise4/: introduce.cpp
week-01/day-2/exercise5/: twonumbers.cpp
week-01/day-2/exercise6/: codinghours.cpp
week-01/day-2/exercise7/: myfavorite.cpp
week-01/day-2/exercise9/: excercise10.cpp
week-02/day-1/ChangeElements/: ChangeElements.cpp
week-02/day-1/Factorial/: factorial.cpp
week-02/day-1/IncrementElement/: IncrementElement.cpp
week-02/day-1/SumElements/: SumElements.cpp
week-02/day-1/Third/: Third.cpp
week-02/day-1/appenda/: appenda.cpp
week-02/day-1/colors/: colors.cpp
week-02/day-1/comparelength/: CompareLength.cpp
week-02/day-1/doubleelement/: doubleelement.cpp
week-05/day-4/anagram/anagram_test/: CMakeLists.txt  anagramtest.cpp
(+111 files in other folders)
